# jina_2026

./: .gitmodules  CMakeLists.txt  README.md  hello.c
atmega128/: CMakeLists.txt
bowling/: main  main.c  볼링 규칙.md
bowling2/: CMakeLists.txt  board.c  main.c
network/: CMakeLists.txt  mqttPub  mqttPub.c
part1/: alphabet  alphabet.c  ceisus2Fahr  compare  compare.c  compare2  compare2.c  fahr2Celcius  fahr2Celcius.c  fourbit  fourbit.c  genderRatio  genderRatio.c  hello  hello.c  increment  increment.c  oddEven  oddEven.c  sizeof.c  stringCopy  stringCopy.c  triangle  triangle.c
part2/: AZZ  AZZ.c  README.md  a2bSum  a2bSum.c  absoluteValue  absoluteValue.c  arraylnit  arraylnit.c  dice  dice.c  dice2  dice2.c  findMax  findMax.c  lotto  lotto.c  multiply  multiply.c  oneToTenFor  oneToTenFor.c  oneToTenSum  oneToTenSum.c  oneToTenSumWhile  oneToTenSumWhile.c  oneToTenWhile  oneToTenWhile.c  passFail  passFail.c  passFail2.c  posZeroNeg.c  scoreGrade  scoreGrade.c  scoreGradeSwitch  scoreGradeSwitch.c  star.c  star2  star2.c  sumArray  sumArray.c  (+3 more)
part3/: CMakeLists.txt  add  add.c  arrayAssignment  arrayAssignment.c  arrayCompare  arrayCompare.c  bubbleSorting  bubbleSorting.c  localVariable  localVariable.c  makefile  pointAndArray  pointAndArray.c  pointer1  pointer1.c  pointer2  pointer2.c  pointer3.c  pointer4_doublepointer  pointer5_functionpointer  pointer5_functionpointer.c  pointer6_voidpointer  pointer6_voidpointer.c  pointerAndAway  qsort  qsort.c  selectionSorting  selectionSorting.c  swap.c
part5/: charGetPut  charGetPut.c  charGetPut4  charGetPut4.c  (+22 more)
(+62 files in other folders)
